--- a/TableViewExample WatchKit App/Base.lproj/Interface.storyboard
+++ b/TableViewExample WatchKit App/Base.lproj/Interface.storyboard
@@ -1,14 +1,41 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="11134" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AgC-eL-Hgc">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="14460.31" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AgC-eL-Hgc">
+    <device id="watch38" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="11055"/>
+        <deployment identifier="watchOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="14460.16"/>
     </dependencies>
     <scenes>
         <!--Interface Controller-->
         <scene sceneID="aou-V4-d1y">
             <objects>
-                <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModuleProvider="target"/>
+                <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModule="TableViewExample_WatchKit_App" customModuleProvider="target">
+                    <items>
+                        <label height="19" alignment="left" text="COUNTRY LIST" id="cGN-AX-TMI">
+                            <color key="textColor" name="systemYellowColor" catalog="System" colorSpace="catalog"/>
+                        </label>
+                        <table alignment="left" id="mkj-YK-ZYT">
+                            <items>
+                                <tableRow identifier="myRow" id="Nov-53-T0V" customClass="CountryRowController" customModule="TableViewExample_WatchKit_App" customModuleProvider="target">
+                                    <group key="rootItem" width="1" alignment="left" id="fH9-oi-2pc">
+                                        <items>
+                                            <label alignment="right" verticalAlignment="center" text="INDIA" id="2QX-zs-LyB"/>
+                                        </items>
+                                    </group>
+                                    <connections>
+                                        <outlet property="countryNameLabel" destination="2QX-zs-LyB" id="uq9-Zb-VYN"/>
+                                    </connections>
+                                </tableRow>
+                            </items>
+                        </table>
+                    </items>
+                    <connections>
+                        <outlet property="countryTable" destination="mkj-YK-ZYT" id="t4a-8l-pf2"/>
+                    </connections>
+                </controller>
             </objects>
         </scene>
     </scenes>
